Make project REUSE compliant

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<!--
+SPDX-FileCopyrightText: 2022 Greg Back <git@gregback.net>
+SPDX-License-Identifier: MIT
+-->
 <html>
 	<head>
 		<title>Hello from Flask</title>
